k8s/apps/blogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogs
  namespace: apps
spec:
  selector:
    app: blogs
  ports:
    - port: 3000
      targetPort: 3000
